// tbclient.Post
syntax = "proto3";

import "PbContent.proto";
import "SubPostList.proto";
import "User.proto";
import "Agree.proto";

message Post {
    int64 id = 1;
    uint32 floor = 3;
    uint32 time = 4;
    repeated PbContent content = 5;
    uint32 sub_post_number = 13;
    int64 author_id = 19;
    message SubPost {
        repeated SubPostList sub_post_list = 2;
    }
    SubPost sub_post_list = 15;
    message SignatureData {
        message SignatureContent {
            int32 type = 1;
            string text = 2;
        }
        repeated SignatureContent content = 4;
    }
    SignatureData signature = 21;
    User author = 23;
    Agree agree = 37;
    int64 tid = 46;
    message CustomFigure {
        string background_value = 3;
    }
    CustomFigure custom_figure = 60;
    message CustomState {
        string content = 2;
    }
    CustomState custom_state = 61;
    message ChatContent {
        string bot_uk = 1;
    }
    ChatContent chat_content = 78;
    message SpriteMemeInfo {
        int64 meme_id = 1;
    }
    SpriteMemeInfo sprite_meme_info = 79;
}
